k8s/spritstat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spritstat
  labels:
    app: spritstat
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: spritstat
  template:
    metadata:
      labels:
        app: spritstat
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - image: ghcr.io/tgamauf/spritstat:latest
          name: spritstat
          volumeMounts:
            - mountPath: /home/app/web/staticfiles
              name: spritstat-static
          ports:
            - containerPort: 8000
      volumes:
        - name: spritstat-static
          persistentVolumeClaim:
            claimName: spritstat-static
