k8s/spritstat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spritstat
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: spritstat
