k8s/spritstat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spritstat
  annotations:
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sprit2.thga.at
    secretName: app-tls
  rules:
  - host: sprit2.thga.at
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: spritstat
              port:
                number: 80
